* Started creating test for the Unsafe group * Converted galette-benchmark from a multi-release JAR into a single-release JAR